--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Responsive Layout 1</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="container">
@@ -13,23 +14,23 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#Home">Home</a></li>
+            <li class="active"><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
-            <li><a href="#More">More</a>
-                <ul>
-                    <li>More</li>
-                    <li>More 2</li>
-                    <li>Even More
-                        <ul>
-                            <li>Info</li>
-                            <li>More Info</li>
+            <li><a href="#More">More<span class="fa fa-caret-down"></span></a>
+                <ul class="hidden">
+                    <li><a href="#">More</a></li>
+                    <li><a href="#">More..</a></li>
+                    <li><a href="#">Even More<span class="fa fa-caret-right"></span></a>
+                        <ul class="hidden side-nav">
+                            <li><a href="#">Info</a></li>
+                            <li><a href="#">More Info</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
         </ul>
         <form action="action.php"><input type="search" placeholder="Search..">
-            <button type="submit"></button>
+            <button type="submit" class="fa fa-search"></button>
         </form>
     </nav>
     <div class="row">
