Articles done, footer done, add media query for main section

--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <title>Responsive Layout 1</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Sura" rel="stylesheet">
 <body>
 <div class="container">
     <header>
@@ -36,18 +36,24 @@
     <div class="row">
         <section>
             <article>
-                <h1>That's article title.</h1>
-                <h3>Title description.</h3>
-                <img src="" alt="">
+                <div class="heading-container">
+                    <h1>That's article title.</h1>
+                    <h3>Title description.</h3>
+                </div>
+                <div class="img-container">
+                    <img src="src/easter-bunny-header.jpg" alt="Bunny">
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus est expedita mollitia nam officiis optio, quaerat quibusdam repudiandae ullam. Aspernatur consectetur, eum ex labore libero molestias quae quam. Culpa, tenetur!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.</p>
-                <a href="#">Read More...</a>
+                <a>Read More...</a>
             </article>
             <article>
-                <h1>That's article title.</h1>
-                <h3>Title description.</h3>
-                <img src="" alt="">
+                <div class="heading-container">
+                    <h1>That's article title.</h1>
+                    <h3>Title description.</h3>
+                </div>
+                <img src="src/esater-colorful-eggs-header.jpg" alt="Eggs">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.</p>
-                <a href="#">Read more...</a>
+                <a href="">Read more...</a>
             </article>
         </section>
         <aside>
@@ -57,15 +63,15 @@
         </aside>
     </div>
     <footer>
-        <div></div>
+        <div>
+            <p><i class="fa fa-copyright" aria-hidden="true"></i>
+            Copyright Kubasulek</p></div>
         <ul>
-            <li><a href="https://twitter.com"></a></li>
-            <li><a href="https://www.facebook.com/"></a></li>
-            <li><a href="https://www.instagram.com"></a></li>
+            <li><a href="https://twitter.com" target="_blank"><img src="src/if_twitter_circle_294709.png" alt="twitter"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="src/if_square-facebook_317727.png" alt="facebook"></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><img src="src/if_Instagram_1298747.png" alt="instagram"></a></li>
         </ul>
     </footer>
 </div>
-
-<form action=""><input type="text" class="exp"></form>
 </body>
 </html>
