Aside section done

--- a/main.html
+++ b/main.html
@@ -57,9 +57,24 @@
             </article>
         </section>
         <aside>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="aside-container">
+                <div class="aside-article">
+                    <div><img src="src/pexels-photo-1099816.jpeg" alt="aa"></div>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p><hr />
+                </div>
+
+                <div class="aside-article">
+                    <div><img src="src/pexels-photo-941539.jpeg" alt="ab"></div>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p><hr />
+                </div>
+                <div class="aside-article">
+                    <div><img src="src/pexels-photo-448835.jpeg" alt="ac"></div>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p>
+                </div>
+            </div>
         </aside>
     </div>
     <footer>
