Cosmetic changes added

--- a/main.html
+++ b/main.html
@@ -51,7 +51,9 @@
                     <h1>That's article title.</h1>
                     <h3>Title description.</h3>
                 </div>
-                <img src="src/esater-colorful-eggs-header.jpg" alt="Eggs">
+                <div class="img-container">
+                    <img src="src/esater-colorful-eggs-header.jpg" alt="Eggs">
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquid, aperiam, architecto beatae dicta dignissimos dolor doloribus dolorum eligendi error iure laboriosam minus odio officia omnis rem ullam vero voluptas? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis eaque et eveniet, explicabo fuga harum nulla obcaecati voluptatum! A consequatur delectus et illum laboriosam natus optio rem repellat sapiente vero.</p>
                 <a href="">Read more...</a>
             </article>
@@ -61,18 +63,24 @@
                 <div class="aside-article">
                     <div><img src="src/pexels-photo-1099816.jpeg" alt="aa"></div>
                     <h3>Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p><hr />
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p>
+                    <a href="#" class="aside-button">Read More..</a>
+                    <hr />
                 </div>
 
                 <div class="aside-article">
                     <div><img src="src/pexels-photo-941539.jpeg" alt="ab"></div>
                     <h3>Title</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p><hr />
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p>
+                    <a href="#" class="aside-button">Read More..</a>
+                    <hr />
                 </div>
                 <div class="aside-article">
                     <div><img src="src/pexels-photo-448835.jpeg" alt="ac"></div>
                     <h3>Title</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cupiditate doloribus eligendi quidem repellat. Atque, ducimus est fugiat fugit magni nulla numquam quaerat reiciendis saepe voluptatem! Eius illo perferendis tenetur.</p>
+                    <a href="#" class="aside-button">Read More..</a>
+                    <hr />
                 </div>
             </div>
         </aside>
