gallery pictures added, gallery htlm done

--- a/main.html
+++ b/main.html
@@ -35,7 +35,45 @@
         </form>
     </nav>
     <div class="row">
-        <section>
+        <section class="slide-show">
+            <div class="slide fade">
+                <div class="number">1/5</div>
+                <img src="src/1-1000x300.jpg" alt="photo 1">
+                <div class="caption">Caption 1</div>
+            </div>
+            <div class="slide fade">
+                <div class="number">2/5</div>
+                <img src="src/2.jpg" alt="photo 2">
+                <div class="caption">Caption 2</div>
+            </div>
+            <div class="slide fade">
+                <div class="number">3/5</div>
+                <img src="src/3.png" alt="photo 3">
+                <div class="caption">Caption 3</div>
+            </div>
+            <div class="slide fade">
+                <div class="number">4/5</div>
+                <img src="src/4.png" alt="photo 4">
+                <div class="caption">Caption 4</div>
+            </div>
+            <div class="slide fade">
+                <div class="number">5/5</div>
+                <img src="src/6.png" alt="photo5">
+                <div class="caption">Caption 5</div>
+            </div>
+            <a href="" class="prev-button"></a>
+            <a href="" class="next-button"></a>
+            <div class="circles">
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="circle"></span>
+                <span class="circle"></span>
+            </div>
+        </section>
+    </div>
+    <div class="row">
+        <section class="main">
             <article>
                 <div class="heading-container">
                     <h1>That's article title.</h1>
