social media links for smartphone width

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
             <button type="submit" class="fa fa-search"></button>
         </form>
     </nav>
-    <div class="row">
+    <div class="row"><!--
         <section class="slide-show">
             <div class="slide fade">
                 <div class="number">1/5</div>
@@ -69,7 +69,7 @@
                 <span class="circle"></span>
                 <span class="circle"></span>
                 <span class="circle"></span>
-            </div>
+            </div>-->
         </section>
     </div>
     <div class="row">
