--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Layout 1</title>
+    <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Sura" rel="stylesheet">
@@ -34,7 +35,7 @@
             <button type="submit" class="fa fa-search"></button>
         </form>
     </nav>
-    <div class="row"><!--
+    <div class="row">
         <section class="slide-show">
             <div class="slide fade">
                 <div class="number">1/5</div>
@@ -61,15 +62,15 @@
                 <img src="src/6.png" alt="photo5">
                 <div class="caption">Caption 5</div>
             </div>
-            <a href="" class="prev-button"></a>
-            <a href="" class="next-button"></a>
+            <a href="" class="prev-button">&#10094;</a>
+            <a href="" class="next-button">&#10095;</a>
             <div class="circles">
                 <span class="circle"></span>
                 <span class="circle"></span>
                 <span class="circle"></span>
                 <span class="circle"></span>
                 <span class="circle"></span>
-            </div>-->
+            </div>
         </section>
     </div>
     <div class="row">
