caret sign changing on resize

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <ul class="hidden">
                     <li><a href="#">More</a></li>
                     <li><a href="#">More..</a></li>
-                    <li><a href="#">Even More<span class="fa fa-caret-right"></span></a>
+                    <li><a href="#">Even More<span id="caret" class="fa fa-caret-right"></span></a>
                         <ul class="hidden side-nav">
                             <li><a href="#">Info</a></li>
                             <li><a href="#">More Info</a></li>
@@ -38,11 +38,13 @@
     <div class="row">
         <section class="slide-show">
             <div class="slide fade">
-                <a href="" class="prev-button">&#10094;</a>
-                <a href="" class="next-button">&#10095;</a>
-                <div class="number">1/5</div>
-                <img src="src/3.png" alt="photo 1">
-                <div class="caption">Caption 1</div>
+                <div>
+                    <a href="" class="prev-button">&#10094;</a>
+                    <a href="" class="next-button">&#10095;</a>
+                    <div class="number">1/5</div>
+                    <img src="src/3.png" alt="photo 1">
+                    <div class="caption">Caption 1</div>
+                </div>
             </div>
             <div class="slide fade">
                  <a href="" class="prev-button">&#10094;</a>
@@ -136,7 +138,7 @@
     </div>
     <footer>
         <div>
-            <p><i class="fa fa-copyright" aria-hidden="true"></i>
+            <p><i class="fa fa-copyright"></i>
             Copyright Kubasulek</p></div>
         <ul>
             <li><a href="https://twitter.com" target="_blank"><img src="src/if_twitter_circle_294709.png" alt="twitter"></a></li>
