minor css changes

--- a/main.html
+++ b/main.html
@@ -47,33 +47,42 @@
                 </div>
             </div>
             <div class="slide fade">
-                 <a href="" class="prev-button">&#10094;</a>
-            <a href="" class="next-button">&#10095;</a>
-                <div class="number">2/5</div>
-                <img src="src/2.jpg" alt="photo 2">
-                <div class="caption">Caption 2</div>
-            </div>
-            <div class="slide fade">
-                 <a href="" class="prev-button">&#10094;</a>
-            <a href="" class="next-button">&#10095;</a>
-                <div class="number">3/5</div>
-                <img src="src/1-1000x300.jpg" alt="photo 3">
-                <div class="caption">Caption 3</div>
-            </div>
-            <div class="slide fade">
-                 <a href="" class="prev-button">&#10094;</a>
-            <a href="" class="next-button">&#10095;</a>
-                <div class="number">4/5</div>
-                <img src="src/4.png" alt="photo 4">
-                <div class="caption">Caption 4</div>
-            </div>
-            <div class="slide fade">
-                 <a href="" class="prev-button">&#10094;</a>
-            <a href="" class="next-button">&#10095;</a>
-                <div class="number">5/5</div>
-                <img src="src/6.png" alt="photo5">
-                <div class="caption">Caption 5</div>
+                <div>
+                    <a href="" class="prev-button">&#10094;</a>
+                    <a href="" class="next-button">&#10095;</a>
+                    <div class="number">2/5</div>
+                    <img src="src/2.jpg" alt="photo 2">
+                    <div class="caption">Caption 2</div>
                 </div>
+            </div>
+            <div class="slide fade">
+                <div>
+                    <a href="" class="prev-button">&#10094;</a>
+                    <a href="" class="next-button">&#10095;</a>
+                    <div class="number">3/5</div>
+                    <img src="src/1-1000x300.jpg" alt="photo 3">
+                    <div class="caption">Caption 3</div>
+                </div>
+            </div>
+            <div class="slide fade">
+                <div>
+                    <a href="" class="prev-button">&#10094;</a>
+                    <a href="" class="next-button">&#10095;</a>
+                    <div class="number">4/5</div>
+                    <img src="src/4.png" alt="photo 4">
+                    <div class="caption">Caption 4</div>
+                </div>
+            </div>
+            <div class="slide fade">
+                <div>
+                    <a href="" class="prev-button">&#10094;</a>
+                    <a href="" class="next-button">&#10095;</a>
+                    <div class="number">5/5</div>
+                    <img src="src/6.png" alt="photo5">
+                    <div class="caption">Caption 5</div>
+                </div>
+            </div>
+
 
             <div class="circles">
             <span class="circle"></span>
