navigation position in different resolutions done

--- a/main.html
+++ b/main.html
@@ -20,12 +20,12 @@
             <li><a href="#About">About</a></li>
             <li><a href="#More">More<span class="fa fa-caret-down"></span></a>
                 <ul class="hidden">
-                    <li><a href="#">More</a></li>
-                    <li><a href="#">More..</a></li>
-                    <li><a href="#">Even More<span id="caret" class="fa fa-caret-right"></span></a>
+                    <li><a href="#More">More</a></li>
+                    <li><a href="#More">More..</a></li>
+                    <li><a href="#More">Even More<span id="caret" class="fa fa-caret-right"></span></a>
                         <ul class="hidden side-nav">
-                            <li><a href="#">Info</a></li>
-                            <li><a href="#">More Info</a></li>
+                            <li><a href="#More">Info</a></li>
+                            <li><a href="#More">More Info</a></li>
                         </ul>
                     </li>
                 </ul>
