--- a/main.html
+++ b/main.html
@@ -19,11 +19,11 @@
             <li class="active"><a href="#Home">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#More">More<span class="fa fa-caret-down"></span></a>
-                <ul class="hidden">
+                <ul class="hidden" style="height: 0; overflow: hidden">
                     <li><a href="#More">More</a></li>
                     <li><a href="#More">More..</a></li>
                     <li><a href="#More">Even More<span id="caret" class="fa fa-caret-right"></span></a>
-                        <ul class="hidden side-nav">
+                        <ul class="hidden side-nav" style="height: 0">
                             <li><a href="#More">Info</a></li>
                             <li><a href="#More">More Info</a></li>
                         </ul>
